<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewApellidoPaterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_apellidoPaterno"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/textViewApellidoMaterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_apellidoMaterno"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/textViewNombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nombres"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/textViewFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fechaNacimiento"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <TextView
        android:id="@+id/textViewColegio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_colegio"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/textViewCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_carrera"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <EditText
        android:id="@+id/editTextApellidoPaterno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="548dp"
        android:ems="10"
        android:hint="Primer Apellido"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextApellidoMaterno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="488dp"
        android:ems="10"
        android:hint="Segundo Apellido"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextNombres"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="428dp"
        android:ems="10"
        android:hint="Ingresa tus nombres"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="368dp"
        android:ems="10"
        android:hint="dd/mm/aa"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextColegio"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="308dp"
        android:ems="10"
        android:hint="Ingresa el colegio"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextCarrera"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="248dp"
        android:ems="10"
        android:hint="Ingresa la carrera"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="181dp"
        android:text="@string/btn_enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="124dp"
        android:text="@string/btn_listar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>